Updated TermsOfService page #16

--- a/PizzaPros/PizzaPros/Areas/Identity/Pages/Account/Register.cshtml
+++ b/PizzaPros/PizzaPros/Areas/Identity/Pages/Account/Register.cshtml
@@ -80,7 +80,7 @@
 
                         <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
                             <p>
-                                By clicking <em>Register</em> you agree to our <a href="" target="_blank"> terms of service </a>
+                                By clicking <em>Register</em> you agree to our <a asp-page="./TermsOfService"> terms of service </a>
                             </p>
                             <hr />
                             
