Update Cart Page UI #19

--- a/PizzaPros/PizzaPros/Pages/Customer/Cart/Index.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Customer/Cart/Index.cshtml
@@ -14,12 +14,12 @@
             <div class="container">
                 <div class="card">
                     <div class="card-header bg-light text-success ml-0 row container">
-                        <div class="col-6">
+                        <div class="col-6 h4 text-nowrap">
                             <i class="fa fa-shopping-cart"></i> &nbsp;
                             Shopping Cart
                         </div>
                         <div class="col-6 text-right">
-                            <a asp-page="../Home/Index" class="btn popup-button-primary text-center">Continue Shopping</a>
+                            <a asp-page="../Home/Index" class="btn popup-button-primary text-center btn-product red text-decoration-none">Continue Shopping</a>
                         </div>
                     </div>
                     <div class="card-body">
@@ -77,7 +77,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="col-12 col-lg-4 offset-lg-8 col-md-6 offset-md-6">
-                            <a asp-page="Summary" class="popup-button form-control">Summary</a>
+                            <a asp-page="Summary" class="popup-button form-control btn-product green text-decoration-none text-center" style="line-height: 1;">Summary</a>
                         </div>
                     </div>
                 </div>
