Updated css files #23

--- a/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
@@ -14,13 +14,20 @@
     <title>@ViewData["Title"] - PizzaPros</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/navbar.css" />
+    <link rel="stylesheet" href="~/css/forms.css" />
+    <link rel="stylesheet" href="~/css/button.css" />
+    <link rel="stylesheet" href="~/css/card.css" />
+    <link rel="stylesheet" href="~/css/details.css" />
+    <link rel="stylesheet" href="~/css/accessDenied.css" />
+    <link rel="stylesheet" href="~/css/footer.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.css" />
 
 </head>
-<body class="search-background" cz-shortcut-listen="true" style="padding-top: 140px;">
+<body class="" cz-shortcut-listen="true" style="padding-top: 140px;">
     <div id="instructions" style="padding-top:0px;">
         <button type="button" class="btn-primary" data-toggle="modal" data-target="#exampleModal"> <i class="fas fa-info-circle" aria-hidden="true"></i> </button>
     </div>
