--- a/PizzaPros/PizzaPros/wwwroot/css/site.css
+++ b/PizzaPros/PizzaPros/wwwroot/css/site.css
@@ -1,23 +1,6 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
-.navbar {
-    background: rgb(236,99,99);
-    background: linear-gradient(0deg, rgba(236,99,99,1) 0%, rgba(130,29,26,1) 78%);
-    height: 10vh;
-}
-
-a.navbar-brand {
-    white-space: normal;
-    text-align: center;
-    word-break: break-all;
-   
-}
-
-    a.navbar-brand > img {
-        max-width: 100%;
-        height: 100px;
-    }
 
 /* Provide sufficient contrast against white background */
 a {
@@ -28,77 +11,6 @@ a {
     transform: rotate(-25deg); /* Equal to rotateZ(45deg) */
 }
 
-.btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-    font-size: 14px;
-}
-
-@media (min-width: 768px) {
-    html {
-        font-size: 16px;
-    }
-}
-
-.border-top {
-    border-top: 1px solid #e5e5e5;
-}
-
-.border-bottom {
-    border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-    font-size: 1rem;
-    line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
-}
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
-}
-
-a.navbar-brand {
-    white-space: normal;
-    text-align: center;
-    word-break: break-all;
-}
-
-/* Provide sufficient contrast against white background */
-a {
-    color: #0366d6;
-}
 
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
@@ -123,18 +35,11 @@ html {
     border-top: 1px solid #e5e5e5;
 }
 
-.border-bottom {
-    border-bottom: 1px solid #e5e5e5;
-}
 
 .box-shadow {
     box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
-button.accept-policy {
-    font-size: 1rem;
-    line-height: inherit;
-}
 
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -150,86 +55,12 @@ body {
 }
 
 
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
-}
-
-   
-
-.search-background {
-    background: url('/images/dust_scratches.png');
-}
-
-
-
 .backgroundWhite {
     background-color: white;
     padding: 30px;
     border-radius: 10px;
     margin-bottom: 30px;
 }
-
-
-
-.login-form {
-    width: 340px;
-    margin: 50px auto;
-}
-
-
-
-    .login-form form {
-        margin-bottom: 15px;
-        background: #fff;
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-        padding: 30px;
-    }
-
-
-
-    .login-form h2 {
-        margin: 0 0 15px;
-    }
-
-/*button customization*/
-
-.btn-product {
-    cursor: pointer;
-    margin: 10px;
-    border-radius: 5px;
-    text-decoration: none;
-    padding: 10px;
-    font-size: 22px;
-    transition: .3s;
-    -webkit-transition: .3s;
-    -moz-transition: .3s;
-    -o-transition: .3s;
-    display: inline-block;
-}
-
-.green {
-    color: #22b24c;
-    border: 2px #22b24c solid;
-}
-
-    .green:hover {
-        color: #fff;
-        background-color: #22b24c;
-    }
-.red {
-    color: #e74c3c;
-    border: 2px #e74c3c solid;
-}
-
-    .red:hover {
-        color: #fff;
-        background-color: #e74c3c;
-    }
 
 /*Multi product carousel override*/
 
@@ -303,160 +134,8 @@ body {
     left: -10px !important;
 }
 
-.card-block {
-   white-space: normal;
-}
 
-
-
-/*Radio button customization*/
-
-.card-product {
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
-    border: 1px solid #e6e6e6;
-    border-radius: 1px;
-    width: 100%;
-}
-
-.card-img-top {
-    max-width: 100% !important;
-    height: auto !important;
-    position: relative;
-    display: block;
-    overflow: hidden;
-    clip-path: polygon(0 0, 100% 0, 100% 69%, 0 88%);
-}
-
-.card-title {
-    line-height: 1;
-}
-
-
-.form-control, .btn {
-    min-height: 38px;
-    border-radius: 2px;
-}
-
-
-.card {
-    max-width: 100%;
-}
-
-
-#logreg-forms {
-    width: 412px;
-    margin: 10vh auto;
-    background-color: white;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-}
-
-    #logreg-forms form {
-        width: 100%;
-        max-width: 410px;
-        padding: 15px;
-        margin: auto;
-    }
-
-    #logreg-forms .form-control {
-        position: relative;
-        box-sizing: border-box;
-        height: auto;
-        padding: 10px;
-        font-size: 16px;
-    }
-
-        #logreg-forms .form-control:focus {
-            z-index: 2;
-        }
-
-.form-control:focus {
-    z-index: 2;
-}
-
-#logreg-forms .form-signin input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-#logreg-forms .form-signin input[type="password"] {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
-
-#logreg-forms .social-login {
-    width: 390px;
-    margin: 0 auto;
-    margin-bottom: 14px;
-}
-
-#logreg-forms .social-btn {
-    font-weight: 100;
-    color: white;
-    width: 190px;
-    font-size: 0.9rem;
-}
-
-#logreg-forms a {
-    display: block;
-    padding-top: 10px;
-    color: lightseagreen;
-}
-
-#logreg-forms .lines {
-    width: 200px;
-    border: 1px solid red;
-}
-
-
-#logreg-forms button[type="submit"] {
-    margin-top: 10px;
-}
-
-#logreg-forms .facebook-btn {
-    background-color: #3C589C;
-}
-
-.facebook-btn {
-    background-color: #3C589C;
-    color: white;
-}
-
-    .facebook-btn:hover, .microsoft-btn:hover, .google-btn:hover {
-        opacity: 0.85;
-        color: white;
-    }
-
-#logreg-forms .microsoft-btn {
-    background-color: #2672ec;
-}
-
-.microsoft-btn {
-    background-color: #2672ec;
-    color: white;
-}
-.google-btn {
-    background-color: #dd4b39;
-    color: white;
-}
-
-#logreg-forms .form-reset, #logreg-forms .form-signup {
-    display: none;
-}
-
-    #logreg-forms .form-signup .social-btn {
-        width: 210px;
-    }
-
-    #logreg-forms .form-signup input {
-        margin-bottom: 2px;
-    }
-
-.form-signup .social-login {
-    width: 210px !important;
-    margin: 0 auto;
-}
+/*Modal instructions*/
 
 #instructions {
     height: 0px;
@@ -471,18 +150,6 @@ body {
     -o-transform: rotate(-90deg);
     filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 }
-
-    #instructions button {
-        display: block;
-        width: 50px;
-        text-align: center;
-        padding: 8px 15px;
-        font-size: 20px;
-        border-bottom: solid 1px #333;
-        border-left: solid 1px #333;
-        border-right: solid 1px #fff;
-        text-decoration: none;
-    }
 
    /* customer home page*/
 .dot {
@@ -517,222 +184,7 @@ body {
     background-color: #fecb02;
 }
 
-/*Details page */
 
-.capFirstLetter::first-letter {
-    text-transform: capitalize !important;
-}
 
-    .capFirstLetter::after {
-        content: ''; /* empty string, no specials here */
-        display: inline-block;
-    }
 
-#inner-wrap {
-    width: 100vw; /* make it 100% of the viewport width (vw) */
-    margin-left: calc((100% - 100vw) / 2); /* then remove the gap to the left of the container with this equation */
-}
 
-/*Instructions Modal */
-
-/*
-Access denied page */
-.full-width {
-    left: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    max-width: 100vw;
-    position: relative;
-    right: 50%;
-    width: 100vw;
-    height:auto;
-    margin-top: -120px;
-}
-
-#accessDenied {
-    box-sizing: border-box;
-    background: #111;
-    min-height: 100vh;
-    overflow-x: auto;
-}
-
-.staff {
-    animation: strike 0.5s 0.5s cubic-bezier(1, 0.25, 1, 1) both;
-    bottom: 15vh;
-    height: 100vh;
-    left: 50%;
-    position: absolute;
-    transform: translate(15%, 0);
-    width: 200px;
-}
-
-.shine {
-    animation: flash 2s 1s ease;
-    background: #fff;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    position: fixed;
-    right: 0;
-    top: 0;
-}
-
-.text {
-    animation-name: shake;
-    animation-iteration-count: 20;
-    animation-timing-function: ease;
-    animation-delay: 1s;
-    animation-duration: 0.1s;
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translate(-100%, -50%);
-    width: 150px;
-}
-
-@media (min-width: 768px) {
-    .text {
-        width: 300px;
-    }
-}
-
-.text * {
-    fill: #fff;
-    stroke: #fff;
-}
-
-@-moz-keyframes flash {
-    0% {
-        opacity: 0.85;
-    }
-
-    50% {
-        opacity: 0.5;
-    }
-
-    75%, 100% {
-        opacity: 0;
-    }
-}
-
-@-webkit-keyframes flash {
-    0% {
-        opacity: 0.85;
-    }
-
-    50% {
-        opacity: 0.5;
-    }
-
-    75%, 100% {
-        opacity: 0;
-    }
-}
-
-@-o-keyframes flash {
-    0% {
-        opacity: 0.85;
-    }
-
-    50% {
-        opacity: 0.5;
-    }
-
-    75%, 100% {
-        opacity: 0;
-    }
-}
-
-@keyframes flash {
-    0% {
-        opacity: 0.85;
-    }
-
-    50% {
-        opacity: 0.5;
-    }
-
-    75%, 100% {
-        opacity: 0;
-    }
-}
-
-@-moz-keyframes strike {
-    from {
-        transform: translate(15%, -100%);
-    }
-}
-
-@-webkit-keyframes strike {
-    from {
-        transform: translate(15%, -100%);
-    }
-}
-
-@-o-keyframes strike {
-    from {
-        transform: translate(15%, -100%);
-    }
-}
-
-@keyframes strike {
-    from {
-        transform: translate(15%, -100%);
-    }
-}
-
-@-moz-keyframes shake {
-    0%, 50%, 100% {
-        transform: translate(-100%, -50%);
-    }
-
-    25% {
-        transform: translate(-102%, -52%);
-    }
-
-    75% {
-        transform: translate(-98%, -48%);
-    }
-}
-
-@-webkit-keyframes shake {
-    0%, 50%, 100% {
-        transform: translate(-100%, -50%);
-    }
-
-    25% {
-        transform: translate(-102%, -52%);
-    }
-
-    75% {
-        transform: translate(-98%, -48%);
-    }
-}
-
-@-o-keyframes shake {
-    0%, 50%, 100% {
-        transform: translate(-100%, -50%);
-    }
-
-    25% {
-        transform: translate(-102%, -52%);
-    }
-
-    75% {
-        transform: translate(-98%, -48%);
-    }
-}
-
-@keyframes shake {
-    0%, 50%, 100% {
-        transform: translate(-100%, -50%);
-    }
-
-    25% {
-        transform: translate(-102%, -52%);
-    }
-
-    75% {
-        transform: translate(-98%, -48%);
-    }
-}
