--- a/PizzaPros/PizzaPros/Pages/Admin/Toppings/Index.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/Toppings/Index.cshtml
@@ -16,7 +16,7 @@
         <table id="DT-load" class="table table-striped table-bordered text-capitalize" style="width:100%">
             <thead>
                 <tr>
-                    <th>Snack Type</th>
+                    <th>Topping</th>
                     <th>Topping Type</th>
                     <th></th>
                 </tr>
