--- a/PizzaPros/PizzaPros/Pages/Admin/MenuType/Upsert.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/MenuType/Upsert.cshtml
@@ -248,7 +248,7 @@
                                 }
                                 else
                                 {
-                                    <button type="submit" onclick="return ValidateInput()" class="btn btn-primary form-control">Create</button>
+                                    <button type="submit" disabled onclick="return ValidateInput()" class="btn btn-primary form-control">Create</button>
                                 }
                             </div>
                             <div class="col-6">
