--- a/PizzaPros/PizzaPros/Pages/Admin/Toppings/Upsert.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/Toppings/Upsert.cshtml
@@ -49,11 +49,11 @@
 
                                 @if (Model.ToppingsItemObj.Toppings.Id != 0)
                                 {
-                                    <button type="submit" class="btn btn-primary form-control">Update</button>
+                                    <button type="submit" disabled class="btn btn-primary form-control">Update</button>
                                 }
                                 else
                                 {
-                                    <button type="submit" class="btn btn-primary form-control">Create</button>
+                                    <button type="submit" disabled class="btn btn-primary form-control">Create</button>
                                 }
                             </div>
                             <div class="col-6">
