Updated modal section

--- a/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Shared/_Layout.cshtml
@@ -68,6 +68,7 @@
                         <li>You can create new accounts as you wish! If you prefer to create any accounts please login using the Admin/Manager User and navigate to Users inside Content Management.&nbsp;</li>
                         @*<li>Create/Edit/Delete functionalities have been disabled for all users inside Content Management (Admin) portal to avoid misuse of website.</li>*@
                         <li>If any Manager account locks any other user using Content Management portal, they will be able to lock them for only 2 min and system will unlock them after 2min.</li>
+                        <li>To prevent misuse, all Admin sections are locked and item's can not be created except for adding new users.</li>
                     </ul>
                     <h4 style="color: #2e6c80;">How to use the demo website:</h4>
                     <ul>
