--- a/PizzaPros/PizzaPros/Pages/Admin/CrustFlavor/Upsert.cshtml
+++ b/PizzaPros/PizzaPros/Pages/Admin/CrustFlavor/Upsert.cshtml
@@ -41,7 +41,7 @@
                     <div class="col-9 offset-3">
                         <div class="row">
                             <div class="col-6">
-                                <button type="submit" class="btn btn-primary form-control disabled">@(Model.PizzaCrustFlavorObj.Id!=0 ? "Update" : "Create")</button>
+                                <button type="submit" disabled class="btn btn-primary form-control ">@(Model.PizzaCrustFlavorObj.Id!=0 ? "Update" : "Create")</button>
                             </div>
                             <div class="col-6">
                                 <a asp-page="./Index" class="btn btn-success form-control">Back to List</a>
